# KerberosService

./: .gitignore  CMakeLists.txt  HttpServer.cpp  HttpServer.h  KerberosAuth.cpp  KerberosAuth.h  KerberosEchoService.vcxproj  README.md  WindowsService.cpp  WindowsService.h  build.bat  main.cpp  setup.ps1  test-service.ps1
